Лабораторная работа 3 Многослойный

--- a/ЛР3_Зозуля.ipynb
+++ b/ЛР3_Зозуля.ipynb
@@ -1,17 +1,8 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "nzg6gq7wvc-C"
-      },
-      "source": [
-        "0. Реализация однослойного персептрона"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "wGZ4cqpHvYg8"
       },
@@ -29,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -60,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -110,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "pxNKW8HmwpNj"
       },
@@ -127,7 +118,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -193,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -219,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -272,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -326,12 +317,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "NylRi94lewet"
       },
       "outputs": [],
       "source": [
+        "\n",
+        "\n",
         "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten\n",
         "import numpy as np\n",
         "(x_train, y_train), (x_test, y_test) = fashion_mnist.load_data()\n",
@@ -343,7 +336,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -405,123 +398,113 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "source": [
+        "#Вариант 3\n",
+        "#Архитектура Модель2-Модель3-Модель3 Скорость обучения 0.25\n",
+        "#Входной вектор X = {0.4; -0.4}\n",
+        "#Начальные значения весов взять произвольным образом из интервала [-0.3 0.3]\n",
+        "#Эталонный вектор Y = {0.3; -0.5; 0.8}\n",
+        "\n",
+        "#По вариантам (в соответствии с номером в списке) спроектируйте архитектуру,\n",
+        "#реализуйте алгоритм корректировки синаптических весов с помощью алгоритма обратного распространения ошибки,\n",
+        "#используя в качестве функции активации логистический сигмоид\n",
+        "\n",
+        "\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense\n",
+        "from tensorflow.keras.optimizers import SGD\n",
+        "from tensorflow.keras.constraints import MinMaxNorm\n",
+        "import numpy as np\n",
+        "\n",
+        "# Входной вектор\n",
+        "X = np.array([[0.4, -0.4]])\n",
+        "\n",
+        "# Эталонный вектор\n",
+        "Y = np.array([[0.3, -0.5, 0.8]])\n",
+        "\n",
+        "# Класс ограничения для весов\n",
+        "class WeightClip(MinMaxNorm):\n",
+        "    def __init__(self, min_value=-0.3, max_value=0.3):\n",
+        "        super().__init__(min_value=min_value, max_value=max_value)\n",
+        "\n",
+        "# Создание объединенной модели\n",
+        "model = Sequential()\n",
+        "\n",
+        "# Первая часть модели (Model2)\n",
+        "model.add(Dense(50, input_dim=2, activation='sigmoid'))  # Первый скрытый слой Model2\n",
+        "model.add(Dense(3, activation='sigmoid'))  # Выходной слой Model2\n",
+        "\n",
+        "# Вторая часть модели (Model3)\n",
+        "model.add(Dense(50, activation='sigmoid'))  # Первый скрытый слой Model3\n",
+        "model.add(Dense(50, activation='sigmoid'))  # Второй скрытый слой Model3\n",
+        "model.add(Dense(3, activation='sigmoid'))  # Выходной слой Model3\n",
+        "\n",
+        "# Третья часть модели (Model3)\n",
+        "model.add(Dense(50, activation='sigmoid'))  # Первый скрытый слой Model3\n",
+        "model.add(Dense(50, activation='sigmoid'))  # Второй скрытый слой Model3\n",
+        "model.add(Dense(3, activation='sigmoid'))  # Выходной слой Model3\n",
+        "\n",
+        "# Компилируем модель\n",
+        "model.compile(optimizer=SGD(learning_rate=0.25),  # Скорость обучения 0.25\n",
+        "              loss='mean_squared_error',           # Функция потерь\n",
+        "              metrics=['accuracy'])                # Метрика точности\n",
+        "\n",
+        "# Обучение модели\n",
+        "history = model.fit(X, Y, epochs=15, verbose=1)\n",
+        "\n",
+        "# Оценка модели\n",
+        "_, accuracy = model.evaluate(X, Y, verbose=1)\n",
+        "\n",
+        "# Печать результата точности\n",
+        "print('Accuracy:', accuracy)"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "Kd-hPgCrh50Q",
-        "outputId": "bee46750-c33e-4e40-a65d-214ae5002953"
+        "id": "dIk5GnpGF2CJ",
+        "outputId": "7645e260-b9d5-4685-cfbe-b70eb0642cd2"
       },
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/10\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/tensorflow/python/data/ops/structured_function.py:258: UserWarning: Even though the `tf.config.experimental_run_functions_eagerly` option is set, this option does not apply to tf.data functions. To force eager execution of tf.data functions, please use `tf.data.experimental.enable_debug_mode()`.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 534ms/step - accuracy: 0.0000e+00 - loss: 0.3684\n",
-            "Epoch 2/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 419ms/step - accuracy: 1.0000 - loss: 0.3486\n",
-            "Epoch 3/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 361ms/step - accuracy: 1.0000 - loss: 0.3299\n",
-            "Epoch 4/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 77ms/step - accuracy: 1.0000 - loss: 0.3123\n",
-            "Epoch 5/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 144ms/step - accuracy: 1.0000 - loss: 0.2960\n",
-            "Epoch 6/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 146ms/step - accuracy: 1.0000 - loss: 0.2808\n",
-            "Epoch 7/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 77ms/step - accuracy: 1.0000 - loss: 0.2667\n",
-            "Epoch 8/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 135ms/step - accuracy: 1.0000 - loss: 0.2536\n",
-            "Epoch 9/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 138ms/step - accuracy: 1.0000 - loss: 0.2416\n",
-            "Epoch 10/10\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 58ms/step - accuracy: 1.0000 - loss: 0.2305\n",
+            "Epoch 1/15\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1s/step - accuracy: 0.0000e+00 - loss: 0.3686\n",
+            "Epoch 2/15\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 645ms/step - accuracy: 0.0000e+00 - loss: 0.2762\n",
+            "Epoch 3/15\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 48ms/step - accuracy: 0.0000e+00 - loss: 0.2204\n",
+            "Epoch 4/15\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 47ms/step - accuracy: 1.0000 - loss: 0.1844\n",
+            "Epoch 5/15\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 47ms/step - accuracy: 1.0000 - loss: 0.1602\n",
+            "Epoch 6/15\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 66ms/step - accuracy: 1.0000 - loss: 0.1437\n",
+            "Epoch 7/15\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 51ms/step - accuracy: 1.0000 - loss: 0.1321\n",
+            "Epoch 8/15\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 59ms/step - accuracy: 1.0000 - loss: 0.1238\n",
+            "Epoch 9/15\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 61ms/step - accuracy: 1.0000 - loss: 0.1176\n",
+            "Epoch 10/15\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 56ms/step - accuracy: 1.0000 - loss: 0.1130\n",
+            "Epoch 11/15\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 50ms/step - accuracy: 1.0000 - loss: 0.1094\n",
+            "Epoch 12/15\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 56ms/step - accuracy: 1.0000 - loss: 0.1065\n",
+            "Epoch 13/15\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 47ms/step - accuracy: 1.0000 - loss: 0.1042\n",
+            "Epoch 14/15\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 47ms/step - accuracy: 1.0000 - loss: 0.1023\n",
+            "Epoch 15/15\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 58ms/step - accuracy: 1.0000 - loss: 0.1007\n",
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 848ms/step - accuracy: 1.0000 - loss: 0.0994\n",
             "Accuracy: 1.0\n"
           ]
         }
-      ],
-      "source": [
-        "import tensorflow as tf\n",
-        "tf.config.run_functions_eagerly(True)  # Включаем режим жадного исполнения\n",
-        "\n",
-        "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Dense\n",
-        "from tensorflow.keras.optimizers import SGD\n",
-        "from tensorflow.keras.constraints import Constraint\n",
-        "import numpy as np\n",
-        "\n",
-        "# Кастомный класс ограничения для весов\n",
-        "class WeightClip(Constraint):\n",
-        "    def __call__(self, weights):\n",
-        "        # Ограничиваем веса в диапазоне [-0.3, 0.3]\n",
-        "        return np.clip(weights, -0.3, 0.3)\n",
-        "\n",
-        "# Определение входного вектора\n",
-        "inputs = np.array([[-0.2, 0.5, 0.7]])\n",
-        "\n",
-        "# Определение эталонного выхода\n",
-        "expected_outputs = np.array([[0.2, -0.3]])\n",
-        "\n",
-        "# Создание модели\n",
-        "model = Sequential()\n",
-        "\n",
-        "# Добавление первого скрытого слоя\n",
-        "# Параметры:\n",
-        "# units=3 - число нейронов в слое\n",
-        "# activation='sigmoid' - функция активации логистический сигмоид\n",
-        "# input_dim=3 - размерность входного сигнала (количество признаков)\n",
-        "# kernel_initializer='random_uniform' - начальное распределение весов равномерно случайное\n",
-        "# bias_initializer='zeros' - смещения устанавливаются равными нулю\n",
-        "# kernel_constraint=WeightClip() - ограничение весов в диапазоне [-0.3, 0.3]\n",
-        "model.add(Dense(units=3, activation='sigmoid', input_dim=3,\n",
-        "                kernel_initializer='random_uniform', bias_initializer='zeros',\n",
-        "                kernel_constraint=WeightClip()))\n",
-        "\n",
-        "# Добавление второго скрытого слоя аналогично первому\n",
-        "model.add(Dense(units=3, activation='sigmoid',\n",
-        "                kernel_initializer='random_uniform', bias_initializer='zeros',\n",
-        "                kernel_constraint=WeightClip()))\n",
-        "\n",
-        "# Добавление выходного слоя\n",
-        "# Выходной слой состоит из двух нейронов, активация тоже сигмоидальная\n",
-        "model.add(Dense(units=2, activation='sigmoid',\n",
-        "                kernel_initializer='random_uniform', bias_initializer='zeros',\n",
-        "                kernel_constraint=WeightClip()))\n",
-        "\n",
-        "# Компиляция модели\n",
-        "# Используем оптимизатор SGD с параметром learning_rate=0.25 (скорость обучения)\n",
-        "# Функция потерь 'mean_squared_error' для регрессии\n",
-        "# Метрика 'accuracy' для оценки точности\n",
-        "model.compile(optimizer=SGD(learning_rate=0.25),  # Исправлено на learning_rate\n",
-        "              loss='mean_squared_error',\n",
-        "              metrics=['accuracy'])\n",
-        "\n",
-        "# Обучение модели\n",
-        "# Эпохи=10000, данные разбиваются на обучающую и проверочную выборки (verbose=0 скрывает процесс обучения)\n",
-        "history = model.fit(inputs, expected_outputs, epochs=10)\n",
-        "\n",
-        "# Оценка точности модели на тестовых данных\n",
-        "# verbose=0 отключает вывод процесса оценки\n",
-        "_, accuracy = model.evaluate(inputs, expected_outputs, verbose=0)\n",
-        "\n",
-        "# Печать результата точности\n",
-        "print('Accuracy:', accuracy)"
       ]
     }
   ],
@@ -529,7 +512,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOT0vz6MF8R63zlMk0IDG31"
+      "authorship_tag": "ABX9TyNEQa309EuVuaTbwwQKXEXD"
     },
     "kernelspec": {
       "display_name": "Python 3",
